# xiaohei-player

./: .eslintrc-auto-import.json  .gitignore  README.md  auto-imports.d.ts  components.d.ts  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  uno.config.ts  vite.config.ts
.github/workflows/: workflow.yml
.trae/rules/: design.md
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  mac_app.cer  mac_installer.cer  tauri.conf.json  xiaohei-player.provisionprofile
src-tauri/capabilities/: default.json  fs.json  shell.json
src-tauri/icons/: icon.icns
src-tauri/lib/migrate/: 0000_main.sql  0001_folder.sql  0003_statistics.sql  0004_network.sql
src-tauri/src/: lib.rs
src-tauri/src/commands/: ffmpeg.rs  mod.rs  server.rs
src-tauri/src/server/: common.rs  file_handler.rs  mod.rs  proxy_handler.rs  smb_handler.rs  webdav_handler.rs
src-tauri/src/smb/: client.rs  commands.rs
src-utools/: index.js  inject.js  jsconfig.json  mcp.js  package-lock.json  package.json  plugin.json
src-utools/core/: TaskEventEmitter.js
src-utools/lib/: better-sqlite3-darwin-arm64.node  better-sqlite3-linux-x64.node  better-sqlite3-win32-ia32.node  better-sqlite3-win32-x64.node
src-utools/plugins/: plugin-app.js  plugin-dialog.js  plugin-event.js  plugin-fs.js  plugin-log.js  plugin-opener.js  plugin-path.js  plugin-shell.js  plugin-sql.js  plugin-store.js  plugin-webview.js  plugin-window.js
src-utools/server/: file_handler.js  index.js  proxy_handler.js  webdav_handler.js
(+254 files in other folders)
